서버프로그래밍 14주 1회차 실습 강의 (django part 6)

--- a/django/mysite/polls/templates/polls/index.html
+++ b/django/mysite/polls/templates/polls/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
 {% if latest_question_list %} <!-- context의 파라미터를 의미-->
     <ul>
